2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Remember the level of the last
	  backup and use it to find the corresponding statefile.

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix for taper crash
	* server-src/dumper.c: Fix compatibility issue

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: Filter /trailing garbage ignored/

2015-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c: gzip exit 2 is not an error
	* installcheck/Amanda_Xfer.pl: test it

2015-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski
	* man/xml-source/tapelist.5.xml: Fix duplicate word

2015-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_main_util.c: Always quote log message.

2015-09-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Label.pm: Fix if the device can't be opened

2015-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Fix CFLAGS for compiling amcrc32c.c

2015-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: s/gcc/$CC/

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Fix compiler error

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (make_crc_table): Remove a bogus fprintf

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Fix for 32 bits

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Qualify crc32vc_add_hw argument as
	  G_GNUC_UNUSED
	* common-src/amutil.c: Define get_sse42 only if we use it
	* common-src/crc32-test.c: Fix if not in 64 bits mode

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Fix compiler warning
	* config/amanda/flags.m4: Fix egrep expresion for solaris

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>