@@ -1,6 +1,10 @@
+2015-10-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/security-util.c: Add debugging
+	* perl/Amanda/FetchDump.pm: Send the statefile earlier, trap error
+
 2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/ampgsql.pl: Remember the level of the last
-	  backup and use it to find the corresponding statefile.
+	  backup and use it to find the corresponding statefile
 
 2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c: Fix for taper crash
